# Code-Archaeology-Tool

./: .dockerignore  .env.example  .gitignore  DOCKER.md  DOCKER_CHAT_GUIDE.md  Dockerfile  Dockerfile.uv  Dockerfile.uv.alt  QUICKSTART.md  README.md  UV_INSTALLATION.md  claude.md  docker-chat.sh  docker-clean.sh  docker-compose.yml  install.sh  pyproject.toml  validate_dockerfile.sh
.github/workflows/: ci-uv.yml  ci.yml
docker/: entrypoint.sh
src/code_archaeology/: __init__.py
src/code_archaeology/agents/: __init__.py  code_archaeology_agent.py
src/code_archaeology/analyzers/: __init__.py  ast_analyzer.py  git_analyzer.py
src/code_archaeology/cli/: main.py
src/code_archaeology/orchestrator/: __init__.py  config.py
src/code_archaeology/tools/: __init__.py  complexity_map_tool.py  core_modules_tool.py  entry_point_tool.py  learning_path_tool.py
src/code_archaeology/utils/: __init__.py  github_cloner.py
src/onboarding_agent/: __init__.py
src/onboarding_agent/agents/: __init__.py  onboarding_agent.py
src/onboarding_agent/analyzers/: __init__.py  complexity_analyzer.py  dependency_analyzer.py
src/onboarding_agent/cli/: __init__.py  main.py
src/onboarding_agent/orchestrator/: __init__.py
src/onboarding_agent/tools/: __init__.py  complexity_map_tool.py  core_modules_tool.py  entry_point_tool.py  learning_path_tool.py
tests/: __init__.py  conftest.py
tests/test_analyzers/: test_ast_analyzer.py  test_complexity_analyzer.py  test_git_analyzer.py
