[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-archaeology-tool"
version = "0.1.0"
description = "AI-powered Code Archaeology Tool to help developers navigate and understand codebases"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "CodebaseGPT Team"}
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-groq>=0.0.1",
    "langgraph>=0.0.20",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "groq>=0.4.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "gitpython>=3.1.41",
    "tree-sitter>=0.20.4",
    "tree-sitter-python>=0.20.4",
    "tree-sitter-javascript>=0.20.3",
    "tree-sitter-java>=0.20.2",
    "networkx>=3.2.1",
    "radon>=6.0.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
code-archaeology = "code_archaeology.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "ANN", "S", "C90"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
